# -FFmpeg-Video-Automation-Dashboard

./: .gitignore  =1.24.0  =2.0.0  CLAUDE.md  README.md  UI_HOURS_FIELDS_REFERENCE.md  benchmark.py  main.py  pyproject.toml  requirements-ai.txt  requirements.txt  setup.py
.claude/: settings.local.json
.specify/memory/: constitution.md
docs/: BUILDING.md  HOURS_SUPPORT_VERIFICATION.md  LOGO_DETECTION_AI_OPTIONS.md  PACKAGE_GUIDE.md  TRIM_MODES_GUIDE.md
docs/screenshots/: README.md
specs/001-enhanced-workflow/: data-model.md  implementation-plan.md  plan-summary.txt  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-executable-ai-delogo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  cpu_limiter.py  data_models.py  detection_profiles.py  exceptions.py  intro_outro_detector.py  logo_detection_utils.py  logo_detector.py  logo_detector_temporal.py  logo_detector_vision.py  logo_position_utils.py  parallel_processor.py  settings_manager.py  state.py  templates.py  video_processor.py
src/ui/: drag_drop.py  (+7 more)
tests/: test_batch_state.py  test_cpu_settings.py  test_cut_units.py  test_detection_profiles_compat.py  test_drag_drop.py  test_error_handler.py  test_executable.py  test_hardware_encoders.py  test_logo_detection_utils.py  test_logo_detector.py  test_logo_position_utils.py  test_parallel_processor.py  test_rename_plan.py  test_split_mode.py  test_templates.py  test_temporal_detector.py  test_timestamp_parser.py  test_trim_modes.py  test_ui_validation.py  test_video_filters.py  test_video_metadata.py
(+27 files in other folders)
